--- a/usecase4-webapp/cloudbuild.yaml
+++ b/usecase4-webapp/cloudbuild.yaml
@@ -33,6 +33,7 @@ steps:
 
   - name: 'gcr.io/cloud-builders/docker'
     id: build-image
+    dir: 'usecase4-webapp'
     entrypoint: bash
     args:
       - -c
